# setup

./: .gitignore  Vagrantfile  bootstrap.sh
tryit/: generate.sh
tryit/src/cpp/: CMakeLists.txt  Makefile  ex5.cpp  rpc_hypre_client.cc  rpc_hypre_server.cc  serializer.cc  valgrind.sh
tryit/src/protos/: hypre.proto
